# Python_Piscine

Module_00/ex6/: ft_garden_summary.py
Module_00/ex7/: ft_seed_inventory.py
Module_01/ex0/: ft_garden_intro.py
Module_01/ex1/: ft_garden_data.py
Module_01/ex2/: ft_plant_growth.py
Module_01/ex4/: ft_garden_security.py
Module_01/ex6/: ft_garden_analytics.py
Module_02/ex0/: ft_first_exception.py
Module_02/ex4/: ft_raise_errors.py
Module_03/ex0/: ft_command_quest.py
Module_03/ex1/: ft_score_analytics.py
Module_03/ex2/: ft_coordinate_system.py
Module_03/ex3/: ft_achievement_tracker.py
Module_03/ex4/: ft_inventory_system.py
Module_03/ex5/: ft_data_stream.py
Module_03/ex6/: ft_data_alchemist.py
Module_04/data-generator-tools/: sample_data.json
Module_04/ex0/: ft_ancient_text.py
Module_04/ex1/: ft_archive_creation.py
Module_04/ex2/: ft_stream_management.py
Module_04/ex3/: ft_vault_security.py
Module_04/ex4/: ft_crisis_response.py
Module_05/ex0/: stream_processor.py
Module_05/ex1/: data_stream.py
Module_06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_3.py  ft_alembic_4.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Module_06/alchemy/: __init__.py  potions.py
Module_07/: battle.py  capacitor.py  tournament.py
Module_07/ex0/: __init__.py  creature.py
Module_07/ex1/: __init__.py  bonus_creatures.py  bonus_factory.py  capabilities.py
Module_07/ex2/: __init__.py  strategy.py
Module_08/ex1/: loading.py  pyproject.toml
(+57 files in other folders)
