[tool.poetry]
name = "ex1"
version = "0.1.0"
description = "Matrix data analysis tool using pandas, numpy and matplotlib"
authors = ["manferre <manferre@student.42lisboa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.25.0"
requests = "^2.31.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
